<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    tools:context="programe.projeto.com.programe.Option">

    <TextView
        android:layout_marginTop="40dp"
        android:id="@+id/view_welcome"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"/>

    <TextView
        android:id="@+id/view_title_option"
        android:layout_below="@id/view_welcome"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:text="@string/title_option"
        android:textSize="25dp"/>


    <LinearLayout
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/view_title_option"
        android:id="@+id/view_Butom_option"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/subtitle_option"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/option1"
            android:layout_margin="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/option1"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


</RelativeLayout>
